tyylit -kesken vielä

--- a/wordpress_plugin/kayttoliittyma.html
+++ b/wordpress_plugin/kayttoliittyma.html
@@ -5,16 +5,17 @@
 
     <form>
         <div class="Row">
+            <p>päivämäärä</p>
 
             <div class="float-left">
-                <h3>Aihe</h3>
+                <h3>AIHE</h3>
                 <select name="aihe" id="aihe" class="aihe">
                     <!--  Tähän geneeriset osa-alueet sivun lataamisen yhteydessä -->
                 </select>
             </div>
 
             <div class="float-left">
-                <h3>Korkeakoulu</h3>
+                <h3>KORKEAKOULU</h3>
                 <div class="selectBox">
                     <select class="nakyvaMaara"><object>Valitse koulu(t)</object></select>
                     <!--tähän valittujen koulujen numero-->
@@ -26,7 +27,7 @@
             </div>
 
             <div class="float-left">
-                <h3>Opetuskieli</h3>
+                <h3>OPETUSKIELI</h3>
                 <select name="kieli" id="kieli">
                     <option value="koulu1">Suomi </option>
                     <option value="koulu2">Ruotsi</option>
@@ -46,7 +47,7 @@
             kurssihaku onnistu, ota yhteyttä sivuston ylläpitäjään.</h2>
 
         <section id="kurssiTaulu">
-            <h2 id="tauluOtsikko">Löydetyt opintojaksot</h2>
+            <h2 id="tauluOtsikko">LÖYDETYT OPINTOJAKSOT</h2>
 
             <table id="data">
                 <thead>
