--- a/wordpress_plugin/kayttoliittyma.html
+++ b/wordpress_plugin/kayttoliittyma.html
@@ -27,7 +27,7 @@
             </div>
 
             <div class="float-left" style="display: flex; flex-flow: column wrap;">
-            <div class="radiorivi" style="">
+            <div class="radiorivi">
                 <h3>Opetuskieli</h3>
                 <input type="radio" name="kieli" value="suomi" id="suomi" checked>
                 <label for="suomi">Suomi</label> &nbsp;&nbsp;
@@ -37,7 +37,7 @@
                 <label for="englanti">Englanti</label>
             </div>
 
-            <div class="radiorivi" style="">
+            <div class="radiorivi">
                 <h3>Opetustapa</h3>
                 <input type="radio" name="tapa" value="kaikkiTavat" id="kaikkiTavat" checked>
                 <label for="kaikkiTavat">Kaikki</label> &nbsp;&nbsp;
