--- a/wordpress_plugin/kayttoliittyma.html
+++ b/wordpress_plugin/kayttoliittyma.html
@@ -104,7 +104,7 @@
     var koulut = null;
     var avattu = false;
     var valittu = true;
-    var kieli = null;
+    var kieli = "suomi";
     var opetustapa = null; 
     var osoite = "http://137.74.119.216:5000/"; //"http://137.74.119.216:5000/"
     
@@ -271,6 +271,7 @@
         console.table(checkBoxes)
         var nro = 0;
         html = ``
+        
         result.forEach(element => {
             if (valitut.has(element.koulu)  && element.kieli == kieli) { 
                 let opintojaksot = ""
