--- a/wordpress_plugin/kayttoliittyma.html
+++ b/wordpress_plugin/kayttoliittyma.html
@@ -201,7 +201,7 @@
             }
             genOsaamiset_select.innerHTML = html
             if(valmisHaku !== undefined) {
-                valmisHaku()
+                valmisHaku(genOsaamiset)
             }
             fetch(genOsaamiset_select.options[genOsaamiset_select.selectedIndex].value);
         })
