--- a/wordpress_plugin/kayttoliittyma.html
+++ b/wordpress_plugin/kayttoliittyma.html
@@ -31,12 +31,7 @@
 
                 <div class="selectBox" id="selectBoxMaakunta">
                     <h3>MAAKUNTA
-                        <div class="tooltip1"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
-                                fill="currentColor" class="bi bi-info-circle" viewBox="0 0 16 16">
-                                <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z" />
-                                <path
-                                    d="M8.93 6.588l-2.29.287-.082.38.45.083c.294.07.352.176.288.469l-.738 3.468c-.194.897.105 1.319.808 1.319.545 0 1.178-.252 1.465-.598l.088-.416c-.2.176-.492.246-.686.246-.275 0-.375-.193-.304-.533L8.93 6.588zM9 4.5a1 1 0 1 1-2 0 1 1 0 0 1 2 0z" />
-                            </svg>
+                        <div class="tooltip1">🛈
                             <span class="tooltiptext1">Maakuntajaottelussa voi esiintyä epätarkkuuksia.</span>
                         </div>
                     </h3>
@@ -59,12 +54,7 @@
                 </div>
                 <br>
                 <div class="radiorivi">
-                    <h3>OPETUSTAPA <div class="tooltip2"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
-                                fill="currentColor" class="bi bi-info-circle" viewBox="0 0 16 16">
-                                <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z" />
-                                <path
-                                    d="M8.93 6.588l-2.29.287-.082.38.45.083c.294.07.352.176.288.469l-.738 3.468c-.194.897.105 1.319.808 1.319.545 0 1.178-.252 1.465-.598l.088-.416c-.2.176-.492.246-.686.246-.275 0-.375-.193-.304-.533L8.93 6.588zM9 4.5a1 1 0 1 1-2 0 1 1 0 0 1 2 0z" />
-                            </svg>
+                    <h3>OPETUSTAPA <div class="tooltip2">🛈
                             <span class="tooltiptext2">"Etäopetus" sisältää etä- ja verkko-opetuksen sekä verkko-opiskelun. "Kaikki" sisältää 
                                 myös monimuoto-opiskelun.
                             </span>
