--- a/wordpress_plugin/kayttoliittyma.html
+++ b/wordpress_plugin/kayttoliittyma.html
@@ -376,7 +376,7 @@
             }
         }
         testiTapaus(valittuKieli, "suomi", false, 1); /*tutlkitaan onko heti sivustolle tullessa suunniteltu kielivalinta*/
-        
+        testiTapaus(valittuOpetustapa, "kaikkiTavat", false, 4);
         
         $(".radiorivi").click(function () {
         testiTapaus(valittuKieli, "suomi", false, 1); /*antaako klikkaillessa oikean kielivalinnan*/
