--- a/wordpress_plugin/kayttoliittyma.html
+++ b/wordpress_plugin/kayttoliittyma.html
@@ -341,7 +341,7 @@
             if (valitut.has(element.koulu) && element.kieli == kieli && (opetustapa == "kaikkiTavat" || element.opetustyyppi == opetustapa)) {
                 let opintojaksot = ""
                 //opintojaksot = "<tr><td colspan=\"1\">" + nro + "</td>\n";
-                opintojaksot += `<td colspan="2"><a href="https://opintopolku.fi/app/#!/koulutus/${element.id}">${element.nimi} (${element.opintopisteet} op)</a></td>\n`;
+                opintojaksot += `<td colspan="2"><a target="_blank" href="https://opintopolku.fi/app/#!/koulutus/${element.id}">${element.nimi} (${element.opintopisteet} op)</a></td>\n`;
                 opintojaksot += "<td colspan=\"2\">" + element.koulu + "</td>\n";
                 //opintojaksot += "<td colspan=\"1\">" + element.kieli + "</td>\n";
                 //opintojaksot += "<td colspan=\"1\">" + element.opintopisteet + "</td>\n";
