--- a/wordpress_plugin/kayttoliittyma.html
+++ b/wordpress_plugin/kayttoliittyma.html
@@ -338,7 +338,7 @@
         html = ``
 
         result.forEach(element => {
-            if (valitut.has(element.koulu) && element.kieli == kieli && (opetustapa == "kaikkiTavat" || element.opetustyyppi == opetustapa)) {
+            if (valitut.has(element.koulu) && element.kieli.includes(kieli) && (opetustapa == "kaikkiTavat" || element.opetustyyppi == opetustapa)) {
                 let opintojaksot = ""
                 //opintojaksot = "<tr><td colspan=\"1\">" + nro + "</td>\n";
                 opintojaksot += `<td colspan="2"><a target="_blank" href="https://opintopolku.fi/app/#!/koulutus/${element.id}">${element.nimi} (${element.opintopisteet} op)</a></td>\n`;
