--- a/wordpress_plugin/kayttoliittyma.html
+++ b/wordpress_plugin/kayttoliittyma.html
@@ -1,7 +1,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <link rel="stylesheet" href="styles.css">
 <div id="sisältö">
-    <h1 style="font-size: 7rem;" id="">KURSSIHAKU</h1>
+    <h1 style="font-size: 6rem;" id="">KURSSIHAKU</h1>
     <p id="paivitys">Päivämäärä</p>
     <br>
 
@@ -32,7 +32,7 @@
                 <div class="selectBox" id="selectBoxMaakunta">
                     <h3>MAAKUNTA
                         <div class="tooltip1">🛈
-                            <span class="tooltiptext1">Maakuntajaottelussa voi esiintyä epätarkkuuksia.</span>
+                            <span style="font-size: 2rem; background-color: orangered;" class="tooltiptext1">Maakuntajaottelussa voi esiintyä epätarkkuuksia.</span>
                         </div>
                     </h3>
                     <select name="maakunnat" id="maakunnat" class="maakunnat">
@@ -55,7 +55,7 @@
                 <br>
                 <div class="radiorivi">
                     <h3>OPETUSTAPA <div class="tooltip2">🛈
-                            <span class="tooltiptext2">"Etäopetus" sisältää etä- ja verkko-opetuksen sekä verkko-opiskelun. "Kaikki" sisältää 
+                            <span style="font-size: 2rem; background-color: orangered;" class="tooltiptext2">"Etäopetus" sisältää etä- ja verkko-opetuksen sekä verkko-opiskelun. "Kaikki" sisältää 
                                 myös monimuoto-opiskelun.
                             </span>
                         </div>
