Adminsivulle apirajapinta, sivunvalinta alasvetovalikolla

--- a/wordpress_plugin/kayttoliittyma.html
+++ b/wordpress_plugin/kayttoliittyma.html
@@ -4,8 +4,6 @@
     <h1 style="font-size: 6rem;">KURSSIHAKU</h1>
     <p id="paivitys">Päivämäärä</p>
     <br>
-
-    <br>
     <form>
         <div>
             <div class="osio">
@@ -16,7 +14,6 @@
             </div>
             <br>
             <h4>Valitse korkeakoulut erikseen tai valitse maakunta, joka valitsee koulut puolestasi:</h4>
-
 
             <div class="kouluOsio">
                 <div class="valikko">
@@ -118,7 +115,7 @@
     var kieli = "suomi";
     var opetustapa = "kaikkiTavat";
     var maakuntaMap = new Map();
-    var osoite = "http://137.74.119.216:5000"; //"http://137.74.119.216:5000/"
+    //var osoite = "http://137.74.119.216:5000"; //"http://137.74.119.216:5000/"
 
     // näkyviin ilmoitus, jos tietokantaan ei saada yhteyttä 
     function virheTilanne() {
