Viimeistelyä käyttöliittymään ja stylesiin -valikot

--- a/wordpress_plugin/kayttoliittyma.html
+++ b/wordpress_plugin/kayttoliittyma.html
@@ -58,12 +58,25 @@
                             </span>
                         </div>
                     </h3>
-                    <input type="radio" name="tapa" value="kaikkiTavat" id="kaikkiTavat" checked>
-                    <label for="kaikkiTavat">Kaikki</label> &nbsp;&nbsp;
-                    <input type="radio" name="tapa" value="lahiopetus" id="lahi">
-                    <label for="lahi">Lähiopetus</label> &nbsp;&nbsp;
-                    <input type="radio" name="tapa" value="etaopetus" id="eta">
-                    <label for="eta">Etäopetus</label>
+                    <div class="valikkoOsio">
+                        <div class="valikko2">
+                            <input type="radio" name="tapa" value="kaikkiTavat" id="kaikkiTavat" checked>
+                            <label for="kaikkiTavat">Kaikki</label> &nbsp;&nbsp;
+                            <input type="radio" name="tapa" value="lahiopetus" id="lahi">
+                            <label for="lahi">Lähiopetus</label> &nbsp;&nbsp;
+                            <input type="radio" name="tapa" value="etaopetus" id="eta">
+                            <label for="eta">Etäopetus</label>
+                        </div>
+
+                        <div class="valikko2">
+                            <input type="radio" name="tapa" value="monimuoto" id="monimuoto">
+                            <label for="monimuoto">Monimuoto</label> &nbsp;&nbsp;
+                            <input type="radio" name="tapa" value="ohjattuopiskelu" id="ohjattuopiskelu">
+                            <label for="ohjattuopiskelu">Ohjattu</label> &nbsp;&nbsp;
+                            <input type="radio" name="tapa" value="itsenainenopiskelu" id="itsenainenopiskelu">
+                            <label for="itsenainenopiskelu">Itsenäinen</label> &nbsp;&nbsp;
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
