--- a/wordpress_plugin/kayttoliittyma.html
+++ b/wordpress_plugin/kayttoliittyma.html
@@ -53,8 +53,7 @@
                     <h3>OPETUSTAPA <div class="infoOpetustapa">🛈
                             <span style="font-size: 2rem; background-color: orangered;"
                                 class="infoTekstiOpetustapa">"Etäopetus" sisältää etä- ja verkko-opetuksen sekä
-                                verkko-opiskelun. "Kaikki" sisältää
-                                myös monimuoto-opiskelun.
+                                verkko-opiskelun.
                             </span>
                         </div>
                     </h3>
